change xceed to date picker and custom timer box

--- a/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
+++ b/Code/WorkSpeed.DesktopClient/Views/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:WorkSpeed.DesktopClient.ViewModels"
         xmlns:views="clr-namespace:WorkSpeed.DesktopClient.Views"
         xmlns:behavior="http://schemas.microsoft.com/xaml/behaviors"
-        xmlns:con="clr-namespace:WorkSpeed.DesktopClient.Converters"
+        xmlns:conv="clr-namespace:WorkSpeed.DesktopClient.Converters"
         xmlns:uc="clr-namespace:WorkSpeed.DesktopClient.Views.UserControls"
         xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         mc:Ignorable="d"
@@ -188,25 +188,55 @@
                                 Background="{StaticResource br_Window.BackgroundAlternative}"
                                 BorderThickness="0,0,1,1" BorderBrush="{StaticResource br_Window.Border}"
                                 >
+                            <Border.Resources>
+                                <conv:FromTimeSpanToStringConverter x:Key="conv_TimeSpanToString" />
+                                <Style TargetType="DatePicker">
+                                    <Setter Property="VerticalContentAlignment" Value="Center" />
+                                </Style>
+                            </Border.Resources>
                             <StackPanel Orientation="Vertical">
 
                                 <!-- productivity datetime picker -->
                                 <StackPanel VerticalAlignment="Center"
+                                            HorizontalAlignment="Center"
                                             Orientation="Horizontal"
                                             Margin="0,5"
                                             >
-                                    <TextBlock Margin="10,0,12,0" Text="С" VerticalAlignment="Center"
+                                    <TextBlock Margin="0,0,7,0" Text="С" VerticalAlignment="Center"
                                                />
-                                    <xctk:DateTimePicker Width="200" Value="{Binding ProductivityReportVm.StartTime, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
+                                    <!--<xctk:DateTimePicker Width="200" Value="{Binding ProductivityReportVm.StartTime, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />-->
+                                    <DatePicker SelectedDate="{Binding ProductivityReportVm.StartDate, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" 
+                                                BorderThickness="0"
+                                                VerticalContentAlignment="Center"
+                                                />
+                                    <TimerBox Width="40" VerticalAlignment="Center" Height="18" 
+                                              VerticalContentAlignment="Center" HorizontalContentAlignment="Right"
+                                              FontFamily="{StaticResource font_RubikMedium}"
+                                              BorderThickness="0"
+                                              Text="{Binding ProductivityReportVm.StartTime,
+                                                             Converter={StaticResource conv_TimeSpanToString},
+                                                             Mode=TwoWay, UpdateSourceTrigger=LostFocus, TargetNullValue=00:00}"
+                                              />
                                 </StackPanel>
-                                <StackPanel VerticalAlignment="Center"
+                                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center"
                                             Orientation="Horizontal"
                                             Margin="0,0,0,5"
                                             >
-                                    <TextBlock Margin="10,0,5,0" Text="По" VerticalAlignment="Center"
+                                    <TextBlock Margin="0,0,0,0" Text="По" VerticalAlignment="Center"
                                                />
-                                    <xctk:DateTimePicker Width="200" Value="{Binding ProductivityReportVm.EndTime, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />
-                                </StackPanel>
+                                    <!--<xctk:DateTimePicker Width="200" Value="{Binding ProductivityReportVm.EndTime, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" />-->
+                                    <DatePicker SelectedDate="{Binding ProductivityReportVm.EndDate, Mode=TwoWay, UpdateSourceTrigger=LostFocus}" 
+                                                BorderThickness="0"
+                                                />
+                                    <TimerBox Width="40" VerticalAlignment="Center" Height="18" 
+                                              VerticalContentAlignment="Center" HorizontalContentAlignment="Right"
+                                              FontFamily="{StaticResource font_RubikMedium}"
+                                              BorderThickness="0"
+                                              Text="{Binding ProductivityReportVm.EndTime,
+                                                             Converter={StaticResource conv_TimeSpanToString},
+                                                             Mode=TwoWay, UpdateSourceTrigger=LostFocus, TargetNullValue=00:00}"
+                                              />
+                            </StackPanel>
 
                                 <!-- productivity update button -->
                                 <Button Content="Обновить" 
@@ -231,7 +261,7 @@
                                 <Style TargetType="Border">
                                     <Setter Property="BorderThickness" Value="0,0,0,1"></Setter>
                                     <Setter Property="BorderBrush" Value="{StaticResource br_Window.Border}" />
-                                    <Setter Property="Visibility" Value="Collapsed" />
+                                    <Setter Property="Visibility" Value="Visible" />
                                     <Style.Triggers>
                                         <DataTrigger Binding="{Binding SelectedIndex}" Value="0">
                                             <Setter Property="Visibility" Value="Visible" />
